replace all point2d uses with point2d double